doc: fix overflow in code blocks

--- a/doc/custom.scss
+++ b/doc/custom.scss
@@ -26,6 +26,12 @@ div.sourceCode {
     }
 }
 
+pre {
+    code {
+        overflow: auto;
+    }
+}
+
 code {
     color: #787109;
 }
